# learning-cmake

hello-module/: CMakeLists.txt
hello-module/cmake/: FindHELLO.cmake
hello-module/hello/include/hello/: my_lib.h
hello-module/hello/lib/Debug/: hello.exp
hello-module/src/: CMakeLists.txt
hello-world/: CMakeLists.txt  main.cpp
hello-world-lib/: CMakeLists.txt
hello-world-lib/libhello/: CMakeLists.txt  my_lib.cpp  my_lib.h
hello-world-lib/src/: CMakeLists.txt  main.cpp
hello-world-shared/include/hello/: my_lib_export.h
hello-world-shared/src/: CMakeLists.txt  main.cpp
vs-cmake-preset/: CMakeLists.txt  CMakePresets.json  main.cpp
